compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_last_in_short_pipeline_step.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  [1, 2, 3]\n  |> echo\n}"
---
----- BEFORE ACTION
pub fn main() {
  [1, 2, 3]
  |> echo
     ↑   
}


----- AFTER ACTION
pub fn main() {
  [1, 2, 3]
}
