compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_echo_with_message_removes_does_not_remove_entire_echo_statement_if_its_the_return.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  echo 1 as \"message\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1 as "message"
  ↑                  
}


----- AFTER ACTION
pub fn main() {
  1
}
