compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_entire_unused_import.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\n// test\nimport result.{unused, unused_again}\n\npub fn main() {\n  todo\n}\n"
---
----- BEFORE ACTION

// test
▔▔▔▔▔▔▔
import result.{unused, unused_again}
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
↑              
  todo
}


----- AFTER ACTION

// test
import result.{}

pub fn main() {
  todo
}
