compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_multiple_unused_values_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\n// test\nimport result.{type Unused, used, unused, type Used, unused_again}\n\npub fn main(x: Used) {\n  used\n  todo\n}\n"
---
----- BEFORE ACTION

// test
▔▔▔▔▔▔▔
import result.{type Unused, used, unused, type Used, unused_again}
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main(x: Used) {
↑                     
  used
  todo
}


----- AFTER ACTION

// test
import result.{used, type Used}

pub fn main(x: Used) {
  used
  todo
}
