compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_opaque_from_private_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "opaque type Wibble {\n  Wobble\n}\n"
---
----- BEFORE ACTION
opaque type Wibble {
            ↑       
  Wobble
}


----- AFTER ACTION
type Wibble {
  Wobble
}
