compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__remove_redundant_tuple_in_case_retain_extras.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: result
---
pub fn main() {
  case
    
      // first comment
      1,
      // second comment
      2,
      3 // third comment before comma

      

      // fourth comment after comma

    
  {
    a -> 0
  }
}
